# SmallestNumInArray_Week2

SmallestNumInArray/: CMakeLists.txt
SmallestNumInArray/SmallestNumInArray/: CMakeLists.txt  SmallestNumInArray.c  SmallestNumInArray.h
